# tg_migrebot

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_add_pain_score_description.py
app/: __init__.py  config.py  main.py
app/adapters/: __init__.py  database.py  models.py  redis_client.py  repository.py
app/bot/: __init__.py  middleware.py  router.py
app/bot/handlers/: __init__.py  common.py  entries.py
app/domain/: __init__.py  models.py  validators.py
app/scheduler/: __init__.py
app/services/: __init__.py
