[project]
name = "tg-migrebot"
version = "0.1.0"
description = "Telegram бот для ведения дневника головной боли (MVP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.10.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "uvloop>=0.19.0; platform_system != 'Windows'",
    "openpyxl>=3.1.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "ANN", "TID"]
ignore = ["ANN101", "ANN102"]
per-file-ignores = {"tests/*" = ["ANN"]}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
python_files = ["test_*.py", "*_test.py"]

